# sugarfunge-test

./: Cargo.toml  README.md
examples/: prime.rs  prime_assets.rs  prime_mints.rs
src/: request.rs
