[package]
name = "sugarfunge-test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sugarfunge-api-types = { git = "https://github.com/functionland/sugarfunge-api.git", rev = "0dc225dada8b3b43343b7788220bed55ae6aa464" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"

[lib]
path = "src/lib.rs"